--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "vlc-player",
-  "version": "0.9.0",
-  "description": "VLC player (wrapper around vlc binaries with RC control)",
+  "version": "0.10.0",
+  "description": "VLC player",
   "main": "index.js",
   "directories": {
     "test": "test"
@@ -25,8 +25,5 @@
   },
   "homepage": "https://github.com/131/node-vlc-player#readme",
   "dependencies": {
-    "mout": "^0.11.1",
-    "nyks": "^2.5.1",
-    "uclass": "^2.0.7"
   }
 }
