--- a/package.json
+++ b/package.json
@@ -6,6 +6,9 @@
   "directories": {
     "test": "test"
   },
+  "os": [
+    "win32"
+  ],
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
